add controllers for rubric, criteria and level